--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
   <link rel="icon" href="assets/favicon-32x32.png">
 </head>
 <body>
+
+  <div class="container" id="main">
+    <div class="box" style="border-left: 0; border-top: 0" id="box1"></div>
+    <div class="box" style="border-top: 0" id="box2"></div>
+    <div class="box" style="border-top: 0; border-right: 0" id="box3"></div>
+    <div class="box" style="border-left: 0" id="box4"></div>
+    <div class="box" id="box5"></div>
+    <div class="box" style="border-right: 0" id="box6"></div>
+    <div class="box" style="border-left: 0; border-bottom: 0" id="box7"></div>
+    <div class="box" style="border-bottom: 0" id="box8"></div>
+    <div class="box" style="border-right: 0; border-bottom: 0" id="box9"></div>
+  </div>
+
+  <div id="player-turn"></div>
+
+  <div class="button">
+    <button id="reset">Reset Game</button>
+  </div>
   
 </body>
 </html>
